@@ -3,13 +3,11 @@
     xmlns:browser="http://namespaces.zope.org/browser"
     >
 
-  <view
-      for="zope.interface.Interface"
-      type="zope.publisher.interfaces.browser.IBrowserRequest"
+  <adapter
+      for="* zope.publisher.interfaces.browser.IBrowserRequest"
       provides="zope.publisher.interfaces.browser.IBrowserPublisher"
       factory="zope.app.publication.traversers.SimpleComponentTraverser"
       permission="zope.Public"
-      allowed_interface="zope.publisher.interfaces.browser.IBrowserPublisher"
       />
 
   <adapter
